@@ -1,3 +1,4 @@
+	* extensions API changed to use span and std::shared_ptr
 	* plugin API changed to handle DHT requests using string_view
 	* removed support for lt_trackers and metadata_transfer extensions
 	  (pre-dating ut_metadata)
